[package]
name = "namoj_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
sled = "0.34"
thiserror = "1.0"
rand = "0.8"
ed25519-dalek = "1.0"
chrono = "0.4"
env_logger = "0.10"
log = "0.4.28"
