[package]
name = "namoj_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
sled = "0.34"
thiserror = "1.0"

# Randomness + crypto
rand = "0.8.5"
ed25519-dalek = "2.1"

# Time handling with serde support
chrono = { version = "0.4", features = ["serde"] }

# Logging
env_logger = "0.10"
log = "0.4.28"